Attempt fixing mobile NoteBox z-index issue

--- a/react-frontend/src/styles/NoteBox/NoteBox.module.css
+++ b/react-frontend/src/styles/NoteBox/NoteBox.module.css
@@ -1,3 +1,7 @@
+#noteBox {
+    z-index: 10;
+}
+
 #infobox {
     border-right: 1px solid grey;
     background: lightgray;
